--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,102 +154,178 @@ div[class*="__container"] {
 	// .page__learn
 	&__learn {
 	}
-}
-/* ===================================== */
+	// .page__benefits
+	&__benefits {
+	}
+	// .page__events
+	&__events {
+	}
+	/* ===================================== */
 
-.main-page {
-	background: linear-gradient(55.95deg, rgba(255, 64, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
-	// .main-page__container
-	&__container {
-		display: flex;
-		flex-direction: column;
-	}
-	// .main-page__body
-	&__body {
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-	}
-	// .main-page__content
-	&__content {
-		flex: 0 0 50%;
-		margin: 201px 0px 189px 0px;
-	}
-	// .main-page__play-block
-	&__play-block {
-		display: flex;
-		align-items: center;
-		&:not(:last-child) {
-			margin: 0px 0px 24px 0px;
+	.main-page {
+		background: linear-gradient(55.95deg, rgba(255, 64, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
+		// .main-page__container
+		&__container {
+			display: flex;
+			flex-direction: column;
 		}
-	}
-	// .main-page__play-img
-	&__play-img {
-		background: #ff3f3a;
-		border-radius: 50%;
-		width: 52px;
-		height: 52px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		position: relative;
-		&::before {
-			content: "";
-			transform: scale(1.61);
-			opacity: 0.12;
+		// .main-page__body
+		&__body {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+		}
+		// .main-page__content
+		&__content {
+			flex: 0 0 50%;
+			margin: 201px 0px 189px 0px;
+		}
+		// .main-page__play-block
+		&__play-block {
+			display: flex;
+			align-items: center;
+			&:not(:last-child) {
+				margin: 0px 0px 24px 0px;
+			}
+		}
+		// .main-page__play-img
+		&__play-img {
 			background: #ff3f3a;
-
 			border-radius: 50%;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
+			width: 52px;
+			height: 52px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			position: relative;
+			&::before {
+				content: "";
+				transform: scale(1.61);
+				opacity: 0.12;
+				background: #ff3f3a;
+
+				border-radius: 50%;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+			}
+			& img {
+				width: 11px;
+				height: 14px;
+			}
 		}
-		& img {
-			width: 11px;
-			height: 14px;
+		// .main-page__play-text
+		&__play-text {
+			font-weight: 700;
+			font-size: 14px;
+			line-height: 150%;
+			color: #1e212c;
+			margin: 0px 0px 0px 16px;
+		}
+		// .main-page__h1
+		&__heading {
+			font-weight: 900;
+			font-size: 64px;
+			line-height: 130%;
+			color: #1e212c;
+			max-width: 496px;
+			&:not(:last-child) {
+				margin: 0px 0px 60px 0px;
+			}
+		}
+		// .main-page__buttons
+		&__buttons {
+			display: flex;
+			flex-wrap: wrap;
+			row-gap: 20px;
+		}
+		// .main-page__btn
+		&__btn {
+			&:not(:last-child) {
+				margin: 0px 24px 0px 0px;
+			}
+		}
+		// .main-page__illustration
+		&__illustration {
+			flex: 0 1 50%;
+			position: relative;
+			padding-bottom: 50.018%;
+			min-width: 450px;
+			transform: translate(8%, 0px);
+			& img {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				object-fit: cover;
+			}
+		}
+		// .main-page__img
+		&__img {
+		}
+		// .main-page__down-block
+		&__down-block {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			row-gap: 20px;
+			margin: 0px 0px 92px 0px;
+		}
+		// .main-page__item
+		&__item {
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+		}
+		&__point {
+			background: #ff3f3a;
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			margin: 0px 10px;
+		}
+		// .main-page__num
+		&__num {
+			font-weight: 900;
+			font-size: 46px;
+			line-height: 130%;
+			color: #1e212c;
+			&:not(:last-child) {
+				margin: 0px 12px 0px 0px;
+			}
+		}
+		// .main-page__text
+		&__text {
+			line-height: 160%;
+			color: #1e212c;
 		}
 	}
-	// .main-page__play-text
-	&__play-text {
-		font-weight: 700;
-		font-size: 14px;
-		line-height: 150%;
-		color: #1e212c;
-		margin: 0px 0px 0px 16px;
-	}
-	// .main-page__h1
-	&__heading {
-		font-weight: 900;
-		font-size: 64px;
-		line-height: 130%;
-		color: #1e212c;
-		max-width: 496px;
-		&:not(:last-child) {
-			margin: 0px 0px 60px 0px;
+
+	/* ===================================== */
+	.whoweare-page {
+		padding: 168px 0px 180px 0px;
+		// .whoweare-page__container
+		&__container {
 		}
-	}
-	// .main-page__buttons
-	&__buttons {
-		display: flex;
-		flex-wrap: wrap;
-		row-gap: 20px;
-	}
-	// .main-page__btn
-	&__btn {
-		&:not(:last-child) {
-			margin: 0px 24px 0px 0px;
+		// .whoweare-page__body
+		&__body {
+			display: flex;
+			flex-wrap: wrap;
+			flex-wrap: wrap-reverse;
+			row-gap: 20px;
 		}
-	}
-	// .main-page__illustration
-	&__illustration {
-		flex: 0 1 50%;
-		position: relative;
-		padding-bottom: 50.018%;
-		min-width: 450px;
-		transform: translate(8%, 0px);
-		& img {
+		// .whoweare-page__img
+		&__img {
+			flex: 1 1 57.3%;
+			position: relative;
+			padding-bottom: 50%;
+		}
+		// .whoweare-page__picture
+		&__picture {
 			position: absolute;
 			width: 100%;
 			height: 100%;
@@ -257,215 +333,362 @@ div[class*="__container"] {
 			left: 0;
 			object-fit: cover;
 		}
-	}
-	// .main-page__img
-	&__img {
-	}
-	// .main-page__down-block
-	&__down-block {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		row-gap: 20px;
-		margin: 0px 0px 92px 0px;
-	}
-	// .main-page__item
-	&__item {
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-	}
-	&__point {
-		background: #ff3f3a;
-		width: 8px;
-		height: 8px;
-		border-radius: 50%;
-		margin: 0px 10px;
-	}
-	// .main-page__num
-	&__num {
-		font-weight: 900;
-		font-size: 46px;
-		line-height: 130%;
-		color: #1e212c;
-		&:not(:last-child) {
-			margin: 0px 12px 0px 0px;
+		// .whoweare-page__content
+		&__content {
+			margin: 0px 0px 0px 135px;
+			flex: 1 1 31%;
+		}
+		// .whoweare-page__block-title
+		&__block-title {
+			&:not(:last-child) {
+				margin: 0px 0px 40px 0px;
+			}
+		}
+		&__box {
+			&:not(:last-child) {
+				margin: 0px 0px 48px 0px;
+			}
+		}
+		// .whoweare-page__text
+		&__text {
+			padding: 0px 0px 0px 32px;
+			line-height: 160%;
+			color: #424551;
+			background: url("../img/whoweare/check.svg") 0 6px / 16px no-repeat;
+			&:not(:last-of-type) {
+				margin: 0px 0px 12px 0px;
+			}
+		}
+
+		// .whoweare-page__btn
+		&__btn {
 		}
 	}
-	// .main-page__text
-	&__text {
-		line-height: 160%;
-		color: #1e212c;
+
+	/* ===================================== */
+	.learn-page {
+		// .learn-page__container
+		&__container {
+			display: flex;
+			flex-direction: column;
+		}
+		// .learn-page__top
+		&__top {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-wrap: wrap;
+			row-gap: 20px;
+			&:not(:last-child) {
+				margin: 0px 0px 60px 0px;
+			}
+		}
+		// .learn-page__block-title
+		&__block-title {
+		}
+		// .learn-page__btn
+		&__btn {
+		}
+		// .learn-page__body
+		&__body {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 0px -15px -30px -15px;
+		}
+		// .learn-page__item
+		&__item {
+			padding: 0px 15px;
+			margin-bottom: 30px;
+			flex: 1 1 50%;
+			min-width: 480px;
+		}
+		&__content {
+			display: flex;
+			box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+			border: 1px solid #e5e8ed;
+			border-radius: 4px;
+			height: 100%;
+			transition: 0.5s;
+			&:hover {
+				box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
+				transition: 0.5s;
+			}
+		}
+		// .learn-page__img
+		&__img {
+			flex: 0 0 214px;
+			height: 214px;
+		}
+		// .learn-page__box
+		&__box {
+			padding: 30px 32px 30px 32px;
+			display: flex;
+			flex-direction: column;
+			height: 100%;
+			& > :not(:last-child) {
+				margin: 0px 0px 20px 0px;
+			}
+		}
+		// .learn-page__post
+		&__post {
+			line-height: 150%;
+			color: #ffffff;
+			align-self: flex-start;
+			border-radius: 4px;
+			padding: 1px 8px;
+			&_green {
+				background: #03cea4;
+			}
+			&_blue {
+				background: #5a87fc;
+			}
+			&_yellow {
+				background: #f89828;
+			}
+			&_red {
+				background: #f52f6e;
+			}
+		}
+		// .learn-page__heading
+		&__heading {
+			font-weight: 700;
+			font-size: 20px;
+			line-height: 150%;
+			color: #1e212c;
+			flex: 1 1 auto;
+		}
+		// .learn-page__price
+		&__price {
+			font-size: 18px;
+			line-height: 150%;
+			color: #787a80;
+			& span {
+				font-weight: 700;
+				color: #ff4242;
+			}
+		}
+	}
+
+	/* ===================================== */
+
+	.benefits-page {
+		padding: 180px 0px 120px 0px;
+		// .benefits-page__container
+		&__container {
+			display: flex;
+			flex-direction: column;
+		}
+		// .benefits-page__block-title
+		&__block-title {
+			text-align: center;
+			margin: 0px 0px 60px 0px;
+		}
+
+		// .benefits-page__advantages
+		&__advantages {
+			display: flex;
+			margin: 0px -15px;
+			align-items: center;
+			flex-wrap: wrap;
+			row-gap: 15px;
+			&:not(:last-child) {
+				margin: 0px 0px 60px 0px;
+			}
+		}
+		// .benefits-page__adnantage
+		&__adnantage {
+			flex: 1 1 25%;
+			padding: 5px 15px;
+			font-weight: 700;
+			line-height: 160%;
+			color: #9a9ca5;
+			transition: 0.5s;
+			border: 1px solid transparent;
+			min-height: 46px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			min-width: 150px;
+			&:hover {
+				color: #ff3f3a;
+				transition: 0.5s;
+				border: 1px solid #ff3f3a;
+				border-radius: 4px;
+			}
+		}
+		// .benefits-page__body
+		&__body {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+			row-gap: 20px;
+		}
+		// .benefits-page__content
+		&__content {
+			flex: 1 1 auto;
+		}
+		// .benefits-page__heading
+		&__heading {
+			font-weight: 900;
+			font-size: 32px;
+			line-height: 130%;
+			color: #1e212c;
+			max-width: 495px;
+			&:not(:last-child) {
+				margin: 0px 0px 24px 0px;
+			}
+		}
+		// .benefits-page__text
+		&__text {
+			line-height: 160%;
+			color: #424551;
+			max-width: 495px;
+		}
+		// .benefits-page__picture
+		&__picture {
+			flex: 1 1 50%;
+			padding-bottom: 37%;
+			position: relative;
+		}
+		// .benefits-page__img
+		&__img {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+		}
+	}
+
+	/* ===================================== */
+	.page {
 	}
 }
-
-/* ===================================== */
-.whoweare-page {
-	padding: 168px 0px 180px 0px;
-	// .whoweare-page__container
+.events-page {
+	padding: 80px 0px;
+	background: linear-gradient(55.95deg, rgba(255, 64, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
+	// .events-page__container
 	&__container {
+		flex-direction: column;
+		display: flex;
 	}
-	// .whoweare-page__body
+	// .events-page__block-title
+	&__block-title {
+		margin: 0px 0px 60px 0px;
+		text-align: center;
+	}
+	// .events-page__body
 	&__body {
 		display: flex;
-		flex-wrap: wrap;
-		flex-wrap: wrap-reverse;
-		row-gap: 20px;
-	}
-	// .whoweare-page__img
-	&__img {
-		flex: 1 1 57.3%;
-		position: relative;
-		padding-bottom: 50%;
-	}
-	// .whoweare-page__picture
-	&__picture {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		object-fit: cover;
-	}
-	// .whoweare-page__content
-	&__content {
-		margin: 0px 0px 0px 135px;
-		flex: 1 1 31%;
-	}
-	// .whoweare-page__block-title
-	&__block-title {
-		&:not(:last-child) {
-			margin: 0px 0px 40px 0px;
-		}
-	}
-	&__box {
-		&:not(:last-child) {
-			margin: 0px 0px 48px 0px;
-		}
-	}
-	// .whoweare-page__text
-	&__text {
-		padding: 0px 0px 0px 32px;
-		line-height: 160%;
-		color: #424551;
-		background: url("../img/whoweare/check.svg") 0 6px / 16px no-repeat;
-		&:not(:last-of-type) {
-			margin: 0px 0px 12px 0px;
-		}
-	}
-
-	// .whoweare-page__btn
-	&__btn {
-	}
-}
-
-/* ===================================== */
-.learn-page {
-	// .learn-page__container
-	&__container {
-		display: flex;
 		flex-direction: column;
-	}
-	// .learn-page__top
-	&__top {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		flex-wrap: wrap;
-		row-gap: 20px;
 		&:not(:last-child) {
 			margin: 0px 0px 60px 0px;
 		}
 	}
-	// .learn-page__block-title
-	&__block-title {
-	}
-	// .learn-page__btn
-	&__btn {
-	}
-	// .learn-page__body
-	&__body {
-		display: flex;
-		flex-wrap: wrap;
-		margin: 0px -15px -30px -15px;
-	}
-	// .learn-page__item
+	// .events-page__item
 	&__item {
-		padding: 0px 15px;
-		margin-bottom: 30px;
-		flex: 1 1 50%;
-		min-width: 480px;
-	}
-	&__content {
+		padding: 32px 40px;
+		height: 100%;
 		display: flex;
-		box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
-		border: 1px solid #e5e8ed;
+		align-items: flex-start;
+		background: #ffffff;
 		border-radius: 4px;
 		transition: 0.5s;
+		flex-wrap: wrap;
+		row-gap: 15px;
+		&:not(:last-child) {
+			margin: 0px 0px 24px 0px;
+		}
+		& > :not(:last-child) {
+			margin: 0px 40px 0px 0px;
+		}
 		&:hover {
-			box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
 			transition: 0.5s;
+			box-shadow: 0px 80px 80px -20px rgba(255, 63, 58, 0.16), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
 		}
 	}
-	// .learn-page__img
-	&__img {
-		flex: 0 0 214px;
-		height: 214px;
+	// .events-page__num
+	&__num {
+		font-weight: 900;
+		font-size: 48px;
+		line-height: 130%;
+		color: #ff3f3a;
+		&:not(:last-child) {
+			margin: 0px 20px 0px 0px;
+		}
 	}
-	// .learn-page__box
 	&__box {
-		padding: 30px 32px 30px 32px;
 		display: flex;
 		flex-direction: column;
-		height: 100%;
-		& > :not(:last-child) {
-			margin: 0px 0px 20px 0px;
-		}
+		justify-content: center;
 	}
-	// .learn-page__post
-	&__post {
+	// .events-page__date
+	&__date {
+		display: flex;
+		align-items: center;
+	}
+	// .events-page__month
+	&__month {
+		font-weight: 700;
+		font-size: 20px;
 		line-height: 150%;
-		color: #ffffff;
-		align-self: flex-start;
-		border-radius: 4px;
-		padding: 1px 8px;
-		&_green {
-			background: #03cea4;
-		}
-		&_blue {
-			background: #5a87fc;
-		}
-		&_yellow {
-			background: #f89828;
-		}
-		&_red {
-			background: #f52f6e;
+		color: #1e212c;
+		&:not(:last-child) {
+			margin: 0px 0px 4px 0px;
 		}
 	}
-	// .learn-page__heading
+	// .events-page__work-time
+	&__work-time {
+		line-height: 160%;
+		color: #787a80;
+	}
+	// .events-page__content
+	&__content {
+		flex: 1 1 auto;
+	}
+	// .events-page__heading
 	&__heading {
 		font-weight: 700;
 		font-size: 20px;
 		line-height: 150%;
 		color: #1e212c;
-		flex: 1 1 auto;
+		&:not(:last-child) {
+			margin: 0px 0px 4px 0px;
+		}
 	}
-	// .learn-page__price
-	&__price {
-		font-size: 18px;
-		line-height: 150%;
+	// .events-page__text
+	&__text {
+		line-height: 160%;
 		color: #787a80;
-		& span {
-			font-weight: 700;
-			color: #ff4242;
+	}
+	// .events-page__btn
+	&__btn {
+		align-self: flex-start;
+		padding: 5px 32px;
+		flex: 0 0 150px;
+		margin-right: 0%;
+	}
+	&__btndown {
+	}
+	// .events-page__down
+	&__down {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		row-gap: 15px;
+	}
+	// .events-page__question
+	&__question {
+		font-weight: 700;
+		font-size: 28px;
+		line-height: 150%;
+		color: #1e212c;
+		&:not(:last-child) {
+			margin: 0px 40px 0px 0px;
 		}
 	}
 }
 
-/* ===================================== */
-
-/* ===================================== */
 /* ===================================== */
 
 /* ===================================== */
